fix privacy/404 page top spacing

--- a/src/scss/page.scss
+++ b/src/scss/page.scss
@@ -18,6 +18,7 @@
 \*-------------------------------------*/
 .page {
   background: white;
+  padding-top: $pad;
   padding-bottom: $pad;
 
   $content-width: 38rem;
